[package]
name = "tomcontrol-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[dependencies]
jni = "0.21.1"
btleplug = "0.11.1"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
thiserror = "1.0.50"
futures = "0.3.28"
uuid = { version = "1.5.0", features = ["v4"] }
